# qwen-tts

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  examples.md  installation.md  introduction.md  platforms.md  quickstart.md  voice-cloning.md
docs/src/commands/: clone.md  config.md  design.md  models.md  speak.md  voices.md
scripts/: generate_compat.py  install.ps1  install.sh
src/: config.rs  editor.rs  generate.rs  lib.rs  main.rs  models.rs  output.rs  platform.rs  voices.rs
